--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
     "mysql2": "^3.3.3",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.0"
   }
